tests/local/wasmtime905.wast
(assert_invalid
    (module (func (local externref)))
    "reference types support is not enabled"
)
